--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
     <script type="text/javascript">
-  window.location.href = "https://www-blockdagnetworks.netlify.app/";
+  window.location.href = "https://https-www-blockdagnetwork.netlify.app/";
   </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
